--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,17 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 management.tracing.sampling.probability=1.0
 spring.zipkin.base-url=http://localhost:9411/
 
+#Gateway Routes Configuration
+spring.cloud.gateway.routes[0].id=company_service
+spring.cloud.gateway.routes[0].uri=http://localhost:8081
+spring.cloud.gateway.routes[0].predicates[0]=Path=/companies/**
+
+spring.cloud.gateway.routes[1].id=job_service
+spring.cloud.gateway.routes[1].uri=http://localhost:8082
+spring.cloud.gateway.routes[1].predicates[0]=Path=/jobs/**
+
+spring.cloud.gateway.routes[2].id=review_service
+spring.cloud.gateway.routes[2].uri=http://localhost:8083
+spring.cloud.gateway.routes[2].predicates[0]=Path=/reviews/**
 
 
