--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.cloud.gateway.routes[2].uri=http://localhost:8083
 spring.cloud.gateway.routes[2].predicates[0]=Path=/reviews/**
 
 
+logging.level.root=info
+logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
+logging.level.org.springframework.cloud.gateway=TRACE
+
+
