--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,13 +18,21 @@ spring:
           predicates:
             - Path=/companies/**
         - id: job-service
-          uri: lb://jobms-default
+          uri: lb://jobms
           predicates:
             - Path=/jobs/**
         - id: review-service
           uri: lb://reviewms
           predicates:
             - Path=/reviews/**
+
+  zipkin:
+    base-url: http://localhost:9411/
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
 
 eureka:
   client:
